Fix: Customers not showing, enabled commented out line

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -66,17 +66,17 @@
                     opacity: 1 !important;
                 }
 
-                &::after {
-                    content: "";
-                    display: block;
-                    height: 20px;
-                    width: 20px;
-                    background: #FFF;
-                    position: absolute;
-                    right: -1px;
-                    top: 50%;
-                    transform: translateY(-50%) translateX(150%) rotate(45deg);
-                }
+                // &::after {
+                //     content: "";
+                //     display: block;
+                //     height: 20px;
+                //     width: 20px;
+                //     background: #FFF;
+                //     position: absolute;
+                //     right: -1px;
+                //     top: 50%;
+                //     transform: translateY(-50%) translateX(150%) rotate(45deg);
+                // }
             }
 
             ion-icon {
